add efix plugin, test getting orientation data

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,4 +15,7 @@
   </p>
 
   <button ion-button secondary menuToggle>Toggle Menu</button>
+
+  <img [src]="'../assets/imgs/back_1.jpg'" height="500" width="500" (click)="clicked($event)"/>
+
 </ion-content>
