draw image based on its original orientation

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,14 +8,10 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <h3>exif playground</h3>
 
   <img [src]="'../assets/imgs/back_1.jpg'" height="500" width="500" (click)="clicked($event)"/>
+
+  <img [src]="imageConverted" height="500" width="500" />
 
 </ion-content>
